--- a/CSS/header.css
+++ b/CSS/header.css
@@ -73,6 +73,12 @@ button {
   border-style: none;
 }
 
+input,
+button {
+  border-style: none;
+  outline-color: #0b5793;
+}
+
 header {
   max-width: auto;
   height: 88px;
@@ -92,16 +98,15 @@ header {
 header .button_links {
   display: flex;
   flex-direction: row;
-  gap: 2.6rem;
+  gap: 43px;
 }
 header .logo {
-  max-width: auto;
+  max-width: 12rem;
 }
 header a {
   color: #ffffff;
-  font-family: "Inter", serif;
-  font-size: 1.5rem;
   font-style: normal;
+  font-size: 1.25rem;
   font-weight: 700;
   line-height: normal;
   text-decoration: none;
@@ -113,27 +118,34 @@ header a {
     height: 66.344px;
   }
   header .logo {
-    max-width: 10rem;
-  }
-  header a {
-    font-size: 1.25rem;
+    max-width: 8rem;
   }
 }
 @media screen and (width < 700px) {
   header {
     border-top: 6px solid #e7c01d;
-    height: 63px;
+    background: #0b5793;
+    box-shadow: 0px 23px 0px 0px #ffffff, 0px 28px 0px 0px #0b5793, 0px 31px 0px 0px #e7c01d, 0px 33px 20.6px 0px rgba(0, 0, 0, 0.15);
+    height: 45px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    padding-block: 8px;
+    gap: 12px;
   }
   header .button_links {
-    visibility: hidden;
+    height: 23px;
+    gap: 23px;
+  }
+  header .button_links a {
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: #0b5793;
   }
   header .logo {
-    margin-top: 23px;
     align-self: center;
-    max-width: 7rem;
+    justify-self: center;
+    max-width: 6rem;
   }
 }
 
