--- a/SCSS/header.scss
+++ b/SCSS/header.scss
@@ -21,18 +21,17 @@ header {
 	.button_links {
 		display: flex;
 		flex-direction: row;
-		gap: 2.6rem;
+		gap: 43px;
 	}
 
 	.logo {
-		max-width: auto;
+		max-width: 12rem;
 	}
 
 	a {
 		color: $Main;
-		font-family: $Inter;
-		font-size: 1.5rem;
 		font-style: normal;
+		font-size: 1.25rem;
 		font-weight: 700;
 		line-height: normal;
 		text-decoration: none;
@@ -44,11 +43,7 @@ header {
 		height: 66.344px;
 
 		.logo {
-			max-width: 10rem;
-		}
-
-		a {
-			font-size: 1.25rem;
+			max-width: 8rem;
 		}
 	}
 }
@@ -56,20 +51,32 @@ header {
 @media screen and (width < 700px) {
 	header {
 		border-top: 6px solid $Accent01;
-		height: 63px;
+		background: $Accent02;
+		box-shadow: 0px 23px 0px 0px $Main, 0px 28px 0px 0px $Accent02,
+			0px 31px 0px 0px $Accent01, 0px 33px 20.6px 0px rgba(0, 0, 0, 0.15);
+		height: 45px;
 
 		flex-direction: column;
-		justify-content: center;
+		justify-content: start;
 		align-items: center;
+		padding-block: 8px;
+		gap: 12px;
 
 		.button_links {
-			visibility: hidden;
+			height: 23px;
+			gap: 23px;
+
+			a {
+				font-size: 0.75rem;
+				font-weight: 600;
+				color: $Accent02;
+			}
 		}
 
 		.logo {
-			margin-top: 23px;
 			align-self: center;
-			max-width: 7rem;
+			justify-self: center;
+			max-width: 6rem;
 		}
 	}
 }
