--- a/CSS/Fix.css
+++ b/CSS/Fix.css
@@ -79,221 +79,167 @@ button {
   outline-color: #0b5793;
 }
 
-.addCourse {
-  width: 618px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  align-items: center;
-  gap: 10px;
-  grid-template-areas: "title title title title" "course course course course" "term1 term2 term3 term4" "discard discard add add";
-}
-.addCourse .titleCourse,
-.addCourse .Courses,
-.addCourse .terms,
-.addCourse .buttonDiscard,
-.addCourse .buttonAdd {
-  border-radius: 10px;
-  box-shadow: 0px 4px 20.6px 0px rgba(0, 0, 0, 0.1);
-}
-.addCourse .inputTerms,
-.addCourse .InputC,
-.addCourse .units {
-  background-color: #ededed;
-  border-style: none;
-  border-radius: 10px;
-  color: #0b5793;
-  text-align: center;
-  font-weight: 600;
-  padding-inline: 0.5rem;
-  font-size: 1.3rem;
-}
-.addCourse .Courses,
-.addCourse .terms {
-  background: #ffffff;
-}
-.addCourse .titleCourse {
-  grid-area: title;
-  background: #0b5793;
-  color: #ffffff;
-  font-size: 1.75rem;
-  text-align: center;
-  font-style: normal;
-  font-weight: 700;
-  padding-block: 0.2em;
-}
-.addCourse .Courses {
-  grid-area: course;
-  height: 166px;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  grid-template-areas: "Course Course Course" "Units Units InputU";
-}
-.addCourse .Courses h2 {
-  font-size: 1.5rem;
-}
-.addCourse .Courses .InputC {
-  width: 523px;
-  height: 40px;
-}
-.addCourse .Courses .units {
-  width: 185px;
-}
-.addCourse .Courses .CourseName {
-  grid-area: Course;
-}
-.addCourse .Courses .UnitsLabel {
-  align-self: flex-start;
-  grid-area: Units;
-}
-.addCourse .Courses .units {
-  justify-self: flex-end;
-  align-self: flex-start;
-  grid-area: InputU;
-}
-.addCourse .Courses h2 {
-  color: #0b5793;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-.addCourse .Courses h2 {
-  color: #0b5793;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-.addCourse .Courses input {
-  background-color: #ededed;
-  border-style: none;
-  border-radius: 10px;
-  color: #0b5793;
-  text-align: center;
-  font-weight: 700;
-  padding-inline: 0.5rem;
-  font-size: 1.5rem;
-}
-.addCourse .terms {
-  height: 94px;
+.resultWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-inline: 14px;
+  gap: 3em;
 }
-.addCourse .terms #prelim {
-  grid-area: term1;
+.resultWrapper .tableWrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 37px;
 }
-.addCourse .terms #midterm {
-  grid-area: term2;
+.resultWrapper .titleResult,
+.resultWrapper .tableTitle,
+.resultWrapper .terms,
+.resultWrapper .overAllGrade,
+.resultWrapper button {
+  border-radius: 10px;
+  box-shadow: 0px 4px 20.6px 0px rgba(0, 0, 0, 0.1);
 }
-.addCourse .terms #prefinal {
-  grid-area: term3;
+.resultWrapper h1,
+.resultWrapper h2,
+.resultWrapper h3,
+.resultWrapper button {
+  font-style: normal;
+  line-height: normal;
 }
-.addCourse .terms #final {
-  grid-area: term4;
+
+.titleResult {
+  width: 618px;
+  height: 57px;
+  background: #0b5793;
 }
-.addCourse .terms h3 {
-  align-self: flex-start;
+.titleResult h1 {
+  color: #ffffff;
+  font-size: 2.25rem;
+  margin-top: 0.3rem;
+  text-align: center;
+  font-weight: 700;
+}
+
+.resultTable {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75em;
+}
+.resultTable .tableTitle {
+  width: 618px;
+  height: 62px;
+  background: #ffffff;
+}
+.resultTable .tableTitle h2 {
   color: #0b5793;
-  font-size: 1.3rem;
+  font-size: 2.25rem;
+  margin-top: 0.3rem;
+  text-align: center;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  padding-top: 5px;
 }
-.addCourse .terms .inputTerms {
-  width: 100%;
+.resultTable .termsAndGrades {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 18px;
 }
-.addCourse .buttonDiscard {
+.resultTable .termsAndGrades .terms {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-inline: 20px;
+  width: 141px;
+  height: 94px;
   background: #ffffff;
-  grid-area: discard;
-  height: 44px;
+}
+.resultTable .termsAndGrades .terms h2 {
   color: #0b5793;
   font-size: 1.5rem;
+  font-style: normal;
   font-weight: 700;
-  line-height: normal;
-  text-align: center;
 }
-.addCourse .buttonAdd {
-  grid-area: add;
+.resultTable .termsAndGrades .terms h3 {
+  color: #0b5793;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.resultTable .overAllGrade {
+  width: 618px;
+  height: 62px;
+  background: #ffffff;
+  display: flex;
+  justify-content: space-around;
+  gap: 10em;
+}
+.resultTable .overAllGrade h2 {
+  color: #0b5793;
+  font-size: 2rem;
+  margin-top: 0.3rem;
+  text-align: end;
+  font-weight: 700;
+  padding-top: 5px;
+}
+.resultTable button {
+  align-self: flex-end;
+  width: 210px;
   height: 44px;
   background: #e7c01d;
   color: #ffffff;
   font-size: 1.5rem;
-  font-weight: 700;
+  margin-top: 0.3rem;
   text-align: center;
-  line-height: normal;
+  font-weight: 700;
 }
 
 @media screen and (width < 700px) {
-  .addCourse {
+  .resultWrapper .tableWrapper {
+    flex-direction: column;
+  }
+  .resultWrapper .titleResult {
     width: 320px;
-    grid-template-areas: "title title title title" "course course course course" "term1 term1 term1 term1" "term2 term2 term2 term2" "term3 term3 term3 term3" "term4 term4 term4 term4" "discard discard add add";
   }
-  .addCourse .titleCourse {
-    grid-area: title;
-    font-size: 1.5rem;
+  .resultWrapper .tableTitle {
+    width: 320px;
   }
-  .addCourse .InputC,
-  .addCourse .inputTerms {
-    font-weight: 200;
-    font-size: 1.3rem;
-  }
-  .addCourse .Courses {
-    grid-area: course;
-    height: 166px;
-  }
-  .addCourse .Courses h2 {
+  .resultWrapper .tableTitle h2 {
     font-size: 1.25rem;
+    padding-top: 12px;
   }
-  .addCourse .Courses .InputC {
-    width: 274px;
-    height: 36px;
-    font-size: 1.25rem;
+  .resultWrapper .termsAndGrades {
+    flex-direction: column;
+    gap: 10px;
   }
-  .addCourse .Courses .units {
-    width: 108px;
-  }
-  .addCourse .terms {
-    height: 55px;
-    display: flex;
+  .resultWrapper .termsAndGrades .terms {
+    width: 320px;
+    height: 43px;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    padding-inline: 22px;
+    align-content: center;
+    padding-inline: 30px;
+    padding-top: 6px;
   }
-  .addCourse .terms h3 {
-    align-self: center;
+  .resultWrapper .overAllGrade {
+    gap: 0em;
+    width: 320px;
+  }
+  .resultWrapper .overAllGrade h2 {
+    font-size: 1.5rem;
+    padding-top: 10px;
+  }
+  .resultWrapper button {
+    width: 193px;
     font-size: 1.25rem;
-  }
-  .addCourse .terms .inputTerms {
-    width: 154px;
-    height: 36px;
-    font-size: 1.25rem;
-  }
-  .addCourse #prelim {
-    grid-area: term1;
-  }
-  .addCourse #midterm {
-    grid-area: term2;
-  }
-  .addCourse #prefinal {
-    grid-area: term3;
-  }
-  .addCourse #final {
-    grid-area: term4;
-  }
-  .addCourse .buttonDiscard {
-    grid-area: discard;
-    height: 44px;
-    font-size: 1.1rem;
-  }
-  .addCourse .buttonAdd {
-    grid-area: add;
-    height: 44px;
-    font-size: 1.3rem;
   }
 }
 
