--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -282,12 +282,13 @@
 				}
 			}
 			.buttonAdd {
-				width: 115px;
+				width: 108px;
 				height: 24px;
 
 				justify-content: center;
 
 				margin-top: 8px;
+				border-radius: 10px;
 
 				.add-icons {
 					gap: 15px;
