--- a/CSS/addCourse.css
+++ b/CSS/addCourse.css
@@ -316,10 +316,11 @@ button {
     font-size: 0.75rem;
   }
   .addCourse .Main-Card .buttonAdd {
-    width: 115px;
+    width: 108px;
     height: 24px;
     justify-content: center;
     margin-top: 8px;
+    border-radius: 10px;
   }
   .addCourse .Main-Card .buttonAdd .add-icons {
     gap: 15px;
