--- a/CSS/listOfCourses.css
+++ b/CSS/listOfCourses.css
@@ -92,7 +92,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 7px;
+  gap: 6px;
   margin-bottom: 18px;
   user-select: none;
   pointer-events: none;
@@ -100,6 +100,10 @@ button {
 .resultWrapper .titleResult .result-icon-title {
   width: 23.395px;
   height: 21.875px;
+}
+.resultWrapper .titleResult svg {
+  width: 24px;
+  height: 22px;
 }
 .resultWrapper .titleResult h1 {
   color: #ffffff;
@@ -244,6 +248,10 @@ button {
     width: 17px;
     height: 14px;
   }
+  .resultWrapper .titleResult svg {
+    width: 17px;
+    height: 14px;
+  }
   .resultWrapper .titleResult h1 {
     font-size: 1rem;
     font-weight: 700;
@@ -292,6 +300,7 @@ button {
     width: 90px;
     height: 24px;
     justify-content: center;
+    border-radius: 10px;
     margin-top: 4px;
   }
   .resultWrapper .tableWrapper .resultTable .RemoveCourseButton .remove-Icon {
