--- a/SCSS/header.scss
+++ b/SCSS/header.scss
@@ -2,7 +2,6 @@
 
 header {
 	max-width: auto;
-	height: 88px;
 	flex-shrink: 0;
 	position: sticky;
 	z-index: 100;
@@ -21,6 +20,8 @@ header {
 	.button_links {
 		display: flex;
 		flex-direction: row;
+		justify-content: end;
+		align-items: center;
 		gap: 43px;
 	}
 
@@ -35,15 +36,18 @@ header {
 		font-weight: 700;
 		line-height: normal;
 		text-decoration: none;
+		padding-block: 1.2em;
 	}
 }
 @media screen and (width < 1000px) {
 	header {
 		border-top: 8px solid $Accent01;
-		height: 66.344px;
 
 		.logo {
 			max-width: 8rem;
+		}
+		a {
+			padding-block: .8em;
 		}
 	}
 }
@@ -52,24 +56,19 @@ header {
 	header {
 		border-top: 6px solid $Accent01;
 		background: $Accent02;
-		box-shadow: 0px 23px 0px 0px $Main, 0px 28px 0px 0px $Accent02,
-			0px 31px 0px 0px $Accent01, 0px 33px 20.6px 0px rgba(0, 0, 0, 0.15);
-		height: 45px;
+		box-shadow: $Box_Shadow;
 
-		flex-direction: column;
-		justify-content: start;
 		align-items: center;
 		padding-block: 8px;
 		gap: 12px;
 
 		.button_links {
-			height: 23px;
-			gap: 23px;
+			gap: 15px;
 
 			a {
-				font-size: 0.75rem;
+				font-size: 0.625rem;
 				font-weight: 600;
-				color: $Accent02;
+				padding-block: .6em;
 			}
 		}
 
