--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -4,6 +4,8 @@ body {
 	background: url(../IMG/Pattern\ 45.png) lightgray 0% 0% / 50px 50px repeat;
 	font-family: $Inter;
 
+	overflow-x: hidden;
+
 	.contentWrapper {
 		padding-block: 10rem;
 		padding-inline: 1vw;
