--- a/SCSS/footer.scss
+++ b/SCSS/footer.scss
@@ -2,96 +2,24 @@
 
 footer {
 	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+	position:static;
+	bottom: 0;
 
-  margin-top: 400px;
 
-	background: $Main;
-	box-shadow: 0px -7px 0px 0px #e7c01d;
-	.main {
-		.Grading-Wrapper {
-			height: 322px;
-
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-
-			padding-inline: 180px;
-
-			h4 {
-				align-self: flex-start;
-				color: $Accent02;
-				font-size: 1.5rem;
-				font-weight: 800;
-			}
-			.lists {
-				align-self: flex-start;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				gap: 90px;
-				ul {
-					padding-left: 0;
-
-					li {
-						color: $Accent02;
-						font-size: 0.875rem;
-						font-weight: 400;
-						list-style-type: none;
-						text-wrap: nowrap;
-					}
-				}
-			}
-		}
-	}
 	h6 {
-		width: inherit;
 		color: $Main;
 		background-color: $Accent02;
 		text-align: center;
 		font-size: 0.875rem;
 		font-weight: 400;
-		padding-block: 1.5em;
-	}
-}
-
-@media screen and (width < 1000px) {
-	footer {
-		.main {
-			.Grading-Wrapper {
-				.lists {
-          flex-wrap: wrap;
-          align-items: start;
-          justify-content: space-between;
-          gap: 10px;
-				}
-			}
-		}
-    h6 {
-      padding-block: 1em;
-    }
+		padding-block: 1em;
 	}
 }
 
 @media screen and (width < 700px) {
 	footer {
-		.main {
-			.Grading-Wrapper {
-				.lists {
-          flex-direction: column;
-          align-items: start;
-          justify-content: center;
-          gap: 0;
-				}
-			}
+		h6 {
+			font-size: 0.625em;
 		}
-    h6 {
-      font-size: 0.625em;
-      padding-block: .5em;
-    }
 	}
 }
