working in progress

--- a/SCSS/CTA.scss
+++ b/SCSS/CTA.scss
@@ -20,7 +20,7 @@
 		font-size: 1.5rem;
 		font-weight: 800;
 	}
-	button {
+	#CTA-Button {
 		width: 115px;
 		height: 24px;
 
@@ -62,7 +62,7 @@
 			font-size: 1rem;
 			font-weight: 700;
 		}
-		button {
+		#CTA-Button {
 			width: 95px;
 			height: 20px;
 
