--- a/SCSS/listOfCourses.scss
+++ b/SCSS/listOfCourses.scss
@@ -1,6 +1,7 @@
 @import "style.scss";
 
 .resultWrapper {
+	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
